cleanup in example directory

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="./main.css">
+    <link rel="stylesheet" type="text/css" href="./atomic.css">
 </head>
 <body id="atomic">
     
